force-app/main/default/objects/Service_Plan__c/fields/Achieved_goals__c.field-meta.xml
<CustomField>
    <fullName>Achieved_goals__c</fullName>
    <label>Achieved goals</label>
    <summaryFilterItems>
        <field>Goal__c.Status__c</field>
        <operation>equals</operation>
        <value>Achieved</value>
    </summaryFilterItems>
    <summaryForeignKey>Goal__c.Service_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>