force-app/main/default/objects/Service_Plan__c/fields/Not_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Not_Achieved__c</fullName>
    <formula>Not_Achieved_goals__c  /  Total_Goals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>