force-app/main/default/objects/Service_Plan__c/fields/Not_Achieved_goals__c.field-meta.xml
<CustomField>
    <fullName>Not_Achieved_goals__c</fullName>
    <label>Not Achieved goals</label>
    <summaryFilterItems>
        <field>Goal__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Achieved</value>
    </summaryFilterItems>
    <summaryForeignKey>Goal__c.Service_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>