force-app/main/default/objects/Service_Plan__c/fields/Total_Goals__c.field-meta.xml
<CustomField>
    <fullName>Total_Goals__c</fullName>
    <label>Total Goals</label>
    <summaryForeignKey>Goal__c.Service_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>